--- a/style.css
+++ b/style.css
@@ -28,6 +28,15 @@ header {
     margin-bottom: 40px;
 }
 
+.logo {
+    max-width: 200px;
+    height: auto;
+    margin-bottom: 15px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 h1 {
     font-size: 32px;
     font-weight: 700;
@@ -37,6 +46,7 @@ h1 {
 .subtitle {
     color: #cccccc;
     font-size: 16px;
+    text-transform: lowercase;
 }
 
 main {
