--- a/style.css
+++ b/style.css
@@ -286,13 +286,13 @@ main {
     background: rgba(22,22,22,0.7);
     backdrop-filter: blur(12px);
     border-top: 1px solid rgba(255,255,255,0.1);
-    border-radius: 0;
+    border-radius: 0 !important;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 28px 0 26px 0;
+    padding: 10px 0 22px 0;
     z-index: 1000;
-    height: 70px;
+    height: auto;
 }
 
 .tab-item {
